// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon Actions All types 1`] = `
<div>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Array
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Boolean
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Empty Object
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    File
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Function A
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Bound Function A
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Infinity
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    -Infinity
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    NaN
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    null
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Number
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Math
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Multiple
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Plain Object
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    RegExp
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    String
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Symbol
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    undefined
  </button>
  <button
    className="css-1yjiefr"
    onClick={[Function]}
  >
    Window
  </button>
</div>
`;

exports[`Storyshots Addon Actions Circular Payload 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Circular Payload
</button>
`;

exports[`Storyshots Addon Actions Decorated Action 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  First Argument
</button>
`;

exports[`Storyshots Addon Actions File object as payload 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  File
</button>
`;

exports[`Storyshots Addon Actions Function Name 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Action.name: 
  fnName
</button>
`;

exports[`Storyshots Addon Actions Hello World 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello World
</button>
`;

exports[`Storyshots Addon Actions Reserved keyword as name 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Delete
</button>
`;
